--- a/SQL/week2/퀴즈 1~10.md
+++ b/SQL/week2/퀴즈 1~10.md
@@ -1,7 +1,22 @@
-#### 1. 주문일이 2017-09-02 일에 해당 하는 주문건에 대해서,  어떤 고객이, 어떠한 상품에 대해서 얼마를 지불하여  상품을 구매했는지 확인해주세요.
+
+<details>
+<summary>Database</summary>
+<div markdown="1">
+  
+![image](https://user-images.githubusercontent.com/83413923/147798889-78540538-090f-495f-a2a2-6d397c983420.png)
+</div>
+</details>
+<br/>
+
+#### 1. 주문일이 2017-09-02 일에 해당 하는 주문건에 대해서,  어떤 고객이, 어떠한 상품에 대해서 얼마를 지불하여  상품을 구매했는지 확인해주세요.
 
 ```sql
-
+SELECT o.orderdate, o.customerid, od.productnumber, p.retailprice
+	FROM orders o 
+JOIN order_details od ON o.ordernumber = od.ordernumber
+JOIN products p ON od.productnumber  = p.productnumber 
+WHERE orderdate = '2017-09-02'
+ORDER BY o.customerid
 ```
 <br/>
 
@@ -10,28 +25,51 @@
 - 헬맷은, Products 테이블의 productname 컬럼을 이용해서 확인해주세요.
 
 ```sql
-
+SELECT custfirstname || ' ' || custlastname AS full_name
+	FROM customers c
+WHERE NOT EXISTS(SELECT *
+                  FROM orders o
+                 JOIN order_details od ON o.ordernumber = od.ordernumber 
+                 JOIN products p ON od.productnumber = p.productnumber 
+                 WHERE o.customerid = c.customerid AND p.productname LIKE '%Helmet'
+                 )
 ```
 <br/>
 
 #### 3. 모든 제품 과 주문 일자를 나열하세요. (주문되지 않은 제품도 포함해서 보여주세요.)
 
 ```sql
-
+SELECT p.productname, o.orderdate
+	FROM products p 
+JOIN order_details od ON p.productnumber = od.productnumber 
+JOIN orders o ON o.ordernumber = od.ordernumber 
+ORDER BY orderdate
 ```
 <br/>
 
 #### 4. 캘리포니아 주와 캘리포니아 주가 아닌 STATS 로 구분하여 각 주문량을 알려주세요. (CASE문 사용)
 
 ```sql
-
+SELECT nt.states, count(nt.ordernumber) as order_cnt
+FROM (SELECT c.custstate, o.ordernumber, 
+            CASE WHEN c.custstate = 'CA' THEN 'CA'
+            ELSE 'No_CA'
+            END AS states
+         FROM customers c
+      JOIN orders o ON c.customerid = o.customerid) AS nt
+GROUP BY nt.states
 ```
 <br/>
 
 #### 5. 공급 업체 와 판매 제품 수를 나열하세요. 단 판매 제품수가 2개 이상인 곳만 보여주세요.
 
 ```sql
-
+SELECT v.vendorid, v.vendname, count(*) as productcount
+	FROM vendors v
+JOIN product_vendors pv ON v.vendorid = pv.vendorid
+GROUP BY v.vendorid
+HAVING count(*) >= 2
+ORDER BY v.vendorid
 ```
 <br/>
 
@@ -39,7 +77,15 @@
 - 주문일자별, 고객의 아이디별로, 주문번호, 주문 금액도 함께 알려주세요.
 
 ```sql
+SELECT od.orderdate, od.customerid, od.ordernumber, sum(od.price) AS prices
+FROM (SELECT o.orderdate, o.customerid, o.ordernumber, od.quotedprice * od.quantityordered AS price 
+	  	FROM orders o
+	  JOIN order_details od ON o.ordernumber = od.ordernumber) AS od 
+GROUP BY od.orderdate , od.customerid , od.ordernumber 
+ORDER BY prices DESC 
+LIMIT 1
 
+--21,674.63
 ```
 <br/>
 
@@ -48,7 +94,9 @@
 - ex) 하루에 한 고객이 주문을 2번이상했다고 가정했을때 -> 해당의 경우는 고객수는 1명으로 계산해야합니다.
 
 ```sql
-
+SELECT o.orderdate , count(ordernumber) AS order_cnt , count(DISTINCT customerid) AS cus_cnt 
+	FROM orders o 
+GROUP BY o.orderdate 
 ```
 
 8번 생략
@@ -59,7 +107,18 @@
 - 타이어와 헬멧에 대해서는 , Products 테이블의 productname 컬럼을 이용해서 확인해주세요.
 
 ```sql
-
+SELECT c.customerid
+  FROM orders o
+JOIN customers c ON c.customerid  = o.customerid 
+JOIN order_details od ON od.ordernumber  = o.ordernumber  
+WHERE 1 = 1
+  AND od.productnumber IN (
+                          SELECT productnumber
+                            FROM products p 
+                          WHERE (productname like '%Helmet%' or productname like '%Tires%')
+                          )
+GROUP BY c.customerid
+ORDER BY customerid
 ```
 <br/>
 
@@ -67,6 +126,22 @@
 - 타이어, 헬멧에 대해서는, Products 테이블의 productname 컬럼을 이용해서 확인해주세요.
 
 ```sql
+SELECT o.customerid  
+	FROM orders o 
+JOIN order_details od ON o.ordernumber = od.ordernumber 
+JOIN products p ON od.productnumber = p.productnumber 
+WHERE p.productname LIKE '%Tire%'
 
+EXCEPT 
+
+SELECT o.customerid  
+	FROM orders o 
+JOIN order_details od ON o.ordernumber = od.ordernumber 
+JOIN products p ON od.productnumber = p.productnumber 
+WHERE p.productname LIKE '%Helmet%'
+ORDER BY customerid
 ```
+
+
+
 
