Update 프로그래머스 오답 정리.md

--- a/SQL/week5/프로그래머스 오답 정리.md
+++ b/SQL/week5/프로그래머스 오답 정리.md
@@ -1,11 +1,25 @@
 1. 동물 보호소에 들어온 동물의 이름은 몇 개인지 조회하는 SQL 문을 작성해주세요. 
 - 이때 이름이 NULL인 경우는 집계하지 않으며 중복되는 이름은 하나로 칩니다.
-
+> > 쉬운 문제인데 갑자기 헷갈려서 한참 생각했다 
 ```sql
 -- SELECT DISTINCT COUNT(NAME) AS "COUNT"  >> 오답 (같은 이름 중복 제거)
 SELECT COUNT(DISTINCT NAME) AS "COUNT"   -->> 정답 (같은 이름 횟수 중복 제거)
  FROM ANIMAL_INS 
  WHERE NAME IS NOT NULL;
 ```
-> 쉬운 문제인데 갑자기 헷갈려서 한참 생각했다 
+
+
+<BR/><BR/>
+
+
+2. 보호소에서는 몇 시에 입양이 가장 활발하게 일어나는지 알아보려 합니다. 09:00부터 19:59까지, 각 시간대별로 입양이 몇 건이나 발생했는지 조회하는 SQL문을 작성해주세요. 
+- 이때 결과는 시간대 순으로 정렬해야 합니다.
+> > [HAVING의 위치는 언제나 GROUP BY 뒤에...](https://github.com/KJIH0/DA_study/blob/main/SQL/06%20HAVING.md)
+```sql
+SELECT HOUR(DATETIME) AS HOUR, COUNT(HOUR(DATETIME)) AS "COUNT"
+FROM ANIMAL_OUTS AO
+GROUP BY HOUR(DATETIME)
+HAVING HOUR >= 9 AND HOUR < 20                  >> HAVING의 위치를 GROUP BY 앞에 써서 오답
+ORDER BY HOUR(AO.DATETIME)
+```
 
